--- a/packages.config
+++ b/packages.config
@@ -1,16 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetty.Buffers" version="0.6.0" targetFramework="net471" />
-  <package id="DotNetty.Codecs" version="0.6.0" targetFramework="net471" />
-  <package id="DotNetty.Common" version="0.6.0" targetFramework="net471" />
-  <package id="DotNetty.Handlers" version="0.6.0" targetFramework="net471" />
-  <package id="DotNetty.Transport" version="0.6.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net471" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net471" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net471" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" requireReinstallation="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
